<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.grocery_shopping_list.RecipeApiViewModel"/>

    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe_api_Search_Results">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/RecipeImage"
                android:layout_width="380sp"
                android:layout_height="325sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15sp"
                android:contentDescription="@string/recipe_image_from_api"
                android:background="@color/background"/>

            <RelativeLayout
                android:layout_width="380sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <TextView
                    android:id="@+id/Meal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10sp"
                    android:fontFamily="sans-serif"
                    android:text="@{viewModel.recipes.meals.get(0).strMeal}"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="380sp"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:background="@color/background"
                android:padding="4sp">

                <TextView
                    android:id="@+id/Category"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@{viewModel.recipes.meals.get(0).strCategory}"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Area"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@{viewModel.recipes.meals.get(0).strArea}"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="380sp"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:padding="10sp">

                <TextView
                    android:id="@+id/possibleYoutubeLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autoLink="web"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@{viewModel.recipes.meals.get(0).strYoutube}"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40sp"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:padding="10sp"
                android:text="@string/ingredients"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20sp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:padding="10sp"
                android:text="@string/instructions"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructionsDesc"
                android:layout_width="380sp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:padding="20sp"
                android:text="@{viewModel.recipes.meals.get(0).strInstructions}"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>
</layout>